# protobuf-two-ways

./: .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE
go/helpers/: BUILD.bazel  README.md  camel.go
go/plugin/: BUILD.bazel  clientmock.go  egg.go  main.go
go/reflect/: BUILD.bazel  clean.go  clean_test.go
protos/: BUILD.bazel
protos/annotations/: BUILD.bazel  clean.proto  clientmock.proto
protos/example/: BUILD.bazel  example.proto
protos/todo/: BUILD.bazel  todo.proto
