load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
  name = "go_default_library",
  srcs = ["clean.go"],
  importpath = "github.com/eggybytes/protobuf-two-ways/go/reflect",
  visibility = ["//visibility:public"],
  deps = [
    "//protos/annotations:annotations_proto_go_library",
    "@org_golang_google_protobuf//proto:go_default_library",
    "@org_golang_google_protobuf//reflect/protoreflect:go_default_library",
    "@org_golang_google_protobuf//types/descriptorpb:go_default_library",
  ],
)

go_test(
  name = "go_default_test",
  srcs = ["clean_test.go"],
  embed = [":go_default_library"],
  deps = [
    "//protos/todo:todo_grpc_go_library",
    "@com_github_stretchr_testify//assert:go_default_library",
  ],
)
