load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
  name = "annotations_proto",
  srcs = [
    "clean.proto",
    "clientmock.proto",
  ],
  visibility = ["//visibility:public"],
  deps = [
    "@com_google_protobuf//:descriptor_proto",
  ],
)

go_proto_library(
  name = "annotations_proto_go_library",
  compilers = [
    "//protos:protoc-gen-go",
  ],
  importpath = "protos/annotations",
  proto = ":annotations_proto",
  visibility = ["//visibility:public"],
  deps = [],
)
