load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
  name = "example_proto",
  srcs = ["example.proto"],
  visibility = ["//visibility:public"],
  deps = [
    "//protos/annotations:annotations_proto",
  ],
)

go_proto_library(
  name = "example_grpc_go_library",
  compilers = [
    "//go/plugin:protoc-gen-custom",
    "//protos:protoc-gen-go",
    "//protos:protoc-gen-grpc",
  ],
  importpath = "protos/example",
  proto = ":example_proto",
  visibility = ["//visibility:public"],
  deps = [
    "//protos/annotations:annotations_proto_go_library",
  ],
)
